[package]
name = "ocean-ctrl"
version = "0.2.0-dev"
edition = "2024"
authors = ["Ocean Players Group"]
description = "Ocean server controller."
homepage = "https://github.com/hdpowered/ocean-ctrl"
repository = "https://github.com/hdpowered/ocean-ctrl"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8", "tracing-0.1"] }
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["clock"] }
config = "0.15.24"
const_format = "0.2.36"
dotenvy = "0.15.7"
futures = "0.3.32"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
tap = "1.0.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
